--- a/desafio3/src/app/components/navbar/navbar.component.html
+++ b/desafio3/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<p>navbar works!</p>
+<div class="navbar">
+  <ul>
+    <li class="active">Students</li>
+    <li>About us</li>
+    <li>More information</li>
+  </ul>
+</div>
