--- a/desafio3/src/app/components/formulario/formulario.component.html
+++ b/desafio3/src/app/components/formulario/formulario.component.html
@@ -96,7 +96,13 @@
       It must contain '@' and '.com'
     </p>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button
+    type="submit"
+    class="btn btn-primary"
+    [disabled]="formContacto.invalid"
+  >
+    Submit
+  </button>
 </form>
 <div>
   <h4 class="pt-4">Valores</h4>
