--- a/desafio4/src/app/app.component.html
+++ b/desafio4/src/app/app.component.html
@@ -4,7 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
   </div>
-  <a mat-button>Proyecto Angular</a>
+  <a mat-button>Plataforma de Estudiantes</a>
 </mat-toolbar>
 
 <mat-sidenav-container fxFlexFill>
