--- a/desafio4/src/app/components/formulario/formulario.component.html
+++ b/desafio4/src/app/components/formulario/formulario.component.html
@@ -1,8 +1,9 @@
-<div class="content-center pt-4">
+<div class="content-center">
   <h2 class="text-center">{{ title }}</h2>
   <form [formGroup]="formContacto" (ngSubmit)="enviarFormulario()">
+    <!-- Name Group-->
     <div class="form-group">
-      <label class="form-label mt-2">Name:</label>
+      <label class="form-label mt-1">Name:</label>
       <input
         type="text"
         class="form-control"
@@ -24,32 +25,34 @@
         Name must be longer than 3 characteres
       </p>
     </div>
+    <!-- Age Group-->
     <div class="form-group">
-      <label class="form-label mt-2">Lastname:</label>
+      <label class="form-label mt-1">Age:</label>
       <input
         type="text"
         class="form-control"
-        placeholder="Lastname"
-        formControlName="lastname"
-        #txtLastname
-        [ngClass]="formContacto.get('lastname')?.errors?.['required']  || formContacto.get('lastname')?.errors?.['minlength']? 'is-invalid':'is-valid'"
-        s
+        placeholder="Enter Age"
+        formControlName="age"
+        #txtName
+        [ngClass]="formContacto.get('age')?.errors?.['required'] || formContacto.get('age')?.errors?.['pattern']? 'is-invalid':'is-valid'"
       />
       <p
-        *ngIf="formContacto.get('lastname')?.errors?.['required']"
+        *ngIf="formContacto.get('age')?.errors?.['required']"
         class="invalid-feedback"
       >
-        Lastname input is required
+        Age input is required
       </p>
       <p
-        *ngIf="formContacto.get('lastname')?.errors?.['minlength']"
+        *ngIf="formContacto.get('age')?.errors?.['pattern']"
         class="invalid-feedback"
       >
-        Lastname must be longer than 3 characteres
+        Age must be numbers
       </p>
     </div>
+
+    <!-- Course Group-->
     <div class="form-group">
-      <label class="form-label mt-2">Course:</label>
+      <label class="form-label mt-1">Course:</label>
       <input
         type="text"
         class="form-control"
@@ -71,8 +74,35 @@
         Course must be longer than 3 characteres
       </p>
     </div>
+
+    <!-- Grade Group-->
     <div class="form-group">
-      <label class="form-label mt-2">Email address</label>
+      <label class="form-label mt-1">Grade:</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Enter Grade"
+        formControlName="grade"
+        #txtName
+        [ngClass]="formContacto.get('grade')?.errors?.['required'] || formContacto.get('grade')?.errors?.['pattern']? 'is-invalid':'is-valid'"
+      />
+      <p
+        *ngIf="formContacto.get('grade')?.errors?.['required']"
+        class="invalid-feedback"
+      >
+        Age input is required
+      </p>
+      <p
+        *ngIf="formContacto.get('grade')?.errors?.['pattern']"
+        class="invalid-feedback"
+      >
+        Age must be numbers
+      </p>
+    </div>
+
+    <!-- Email Group-->
+    <div class="form-group">
+      <label class="form-label mt-1">Email address</label>
       <input
         type="text"
         class="form-control"
@@ -95,6 +125,31 @@
         class="invalid-feedback"
       >
         It must contain '@' and '.com'
+      </p>
+    </div>
+    <!-- Symbol Group-->
+    <div class="form-group">
+      <label class="form-label mt-1">Symbol:</label>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Symbol"
+        formControlName="symbol"
+        #txtLastname
+        [ngClass]="formContacto.get('symbol')?.errors?.['required']  || formContacto.get('symbol')?.errors?.['minlength']? 'is-invalid':'is-valid'"
+        s
+      />
+      <p
+        *ngIf="formContacto.get('lastname')?.errors?.['required']"
+        class="invalid-feedback"
+      >
+        Lastname input is required
+      </p>
+      <p
+        *ngIf="formContacto.get('lastname')?.errors?.['minlength']"
+        class="invalid-feedback"
+      >
+        Lastname must be longer than 3 characteres
       </p>
     </div>
     <button
