--- a/desafio4/src/app/components/formulario/formulario.component.html
+++ b/desafio4/src/app/components/formulario/formulario.component.html
@@ -1,9 +1,36 @@
 <div class="content-center">
   <h2 class="text-center">{{ title }}</h2>
-  <form [formGroup]="formContacto" (ngSubmit)="enviarFormulario()">
+  <form
+    [formGroup]="formContacto"
+    (ngSubmit)="addAlumno(this.formContacto.value)"
+  >
+    <!-- Age Group-->
+    <div class="form-group">
+      <label class="form-label">Position:</label>
+      <input
+        type="number"
+        class="form-control"
+        placeholder="Enter Position"
+        formControlName="position"
+        #txtName
+        [ngClass]="formContacto.get('position')?.errors?.['required'] || formContacto.get('position')?.errors?.['pattern']? 'is-invalid':'is-valid'"
+      />
+      <p
+        *ngIf="formContacto.get('position')?.errors?.['required']"
+        class="invalid-feedback"
+      >
+        Position input is required
+      </p>
+      <p
+        *ngIf="formContacto.get('position')?.errors?.['pattern']"
+        class="invalid-feedback"
+      >
+        Position must be numbers
+      </p>
+    </div>
     <!-- Name Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Name:</label>
+      <label class="form-label">Name:</label>
       <input
         type="text"
         class="form-control"
@@ -27,7 +54,7 @@
     </div>
     <!-- Age Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Age:</label>
+      <label class="form-label">Age:</label>
       <input
         type="text"
         class="form-control"
@@ -52,7 +79,7 @@
 
     <!-- Course Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Course:</label>
+      <label class="form-label">Course:</label>
       <input
         type="text"
         class="form-control"
@@ -77,7 +104,7 @@
 
     <!-- Grade Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Grade:</label>
+      <label class="form-label">Grade:</label>
       <input
         type="text"
         class="form-control"
@@ -102,7 +129,7 @@
 
     <!-- Email Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Email address</label>
+      <label class="form-label">Email address</label>
       <input
         type="text"
         class="form-control"
@@ -129,7 +156,7 @@
     </div>
     <!-- Symbol Group-->
     <div class="form-group">
-      <label class="form-label mt-1">Symbol:</label>
+      <label class="form-label">Symbol:</label>
       <input
         type="text"
         class="form-control"
