--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -1,46 +1,93 @@
+<div id="content">
+  <div class="container__content">
+    <h2 class="text-center p-5">Students</h2>
+    <div class="container content__box">
+      <table class="table">
+        <thead>
+          <tr class="bg-dark text-white">
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Age</th>
+            <th scope="col">Curso</th>
+            <th scope="col">Grade</th>
+            <th scope="col">Email</th>
+            <th scope="col">Options</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr
+            *ngFor="let alumno of alumnos"
+            [ngClass]="alumno.id % 2 == 0 ? 'bg-gray' : 'bg-graydark'"
+            (click)="userClicked(alumno.name)"
+          >
+            <td [ngStyle]="{ color: 'blue' }">{{ alumno.position }}</td>
+            <td
+              data-toggle="tooltip"
+              data-placement="top"
+              title="{{ alumno.name }}"
+            >
+              {{ alumno.name }}
+            </td>
+            <td>{{ alumno.age }}</td>
+            <td>{{ alumno.course }}</td>
+            <td [ngClass]="alumno.grade > 14 ? 'text-success' : 'text-danger'">
+              {{ alumno.grade }}
+            </td>
+            <td>{{ alumno.email }}</td>
+            <td>{{ alumno.grade }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <p class="pt-4">Contact us for more information.</p>
+    <p>Date: {{ fecha | date: "dd/MM/YYYY" }}</p>
+  </div>
+</div>
+
+
 <h2 class="text-center">Total Students</h2>
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="alumnos">
+  <table mat-table [dataSource]="alumnos" #tabla1>
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.position }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.name }}</td>
     </ng-container>
 
     <!-- Age Column -->
     <ng-container matColumnDef="age">
       <th mat-header-cell *matHeaderCellDef>Age</th>
-      <td mat-cell *matCellDef="let element">{{ element.age }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.age }}</td>
     </ng-container>
 
     <!-- Course Column -->
     <ng-container matColumnDef="course">
       <th mat-header-cell *matHeaderCellDef>Course</th>
-      <td mat-cell *matCellDef="let element">{{ element.course }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.course }}</td>
     </ng-container>
 
     <!-- Grade Column -->
     <ng-container matColumnDef="grade">
       <th mat-header-cell *matHeaderCellDef>Grade</th>
-      <td mat-cell *matCellDef="let element">{{ element.grade }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.grade }}</td>
     </ng-container>
 
     <!-- Email Column -->
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{ element.email }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.email }}</td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+      <td mat-cell *matCellDef="let alumno">{{ alumno.symbol }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
