--- a/desafio4/src/app/components/formulario/formulario.component.html
+++ b/desafio4/src/app/components/formulario/formulario.component.html
@@ -1,5 +1,5 @@
 <div class="content-center">
-  <h2 class="text-center">{{ title }}</h2>
+  <h1 class="text-center font-weight-bold">{{ title }}</h1>
   <form
     [formGroup]="formContacto"
     (ngSubmit)="addAlumno(this.formContacto.value)"
@@ -9,7 +9,6 @@
     <div class="form-group">
       <label class="form-label">Position:</label>
       <input
-        type="number"
         class="form-control"
         placeholder="Enter Position"
         formControlName="position"
