--- a/desafio4/src/app/components/formulario/formulario.component.html
+++ b/desafio4/src/app/components/formulario/formulario.component.html
@@ -9,6 +9,7 @@
     <div class="form-group">
       <label class="form-label">Position:</label>
       <input
+        type="number"
         class="form-control"
         placeholder="Enter Position"
         formControlName="position"
