--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -35,7 +35,10 @@
             </td>
             <td>{{ alumno.email }}</td>
             <td>
-              <mat-icon aria-hidden="false" aria-label="Example home icon"
+              <mat-icon
+                aria-hidden="false"
+                aria-label="Example home icon"
+                (click)="modificarAlumno(alumno)"
                 >edit</mat-icon
               >
               <mat-icon
