--- a/desafio4/src/app/components/formulario/formulario.component.html
+++ b/desafio4/src/app/components/formulario/formulario.component.html
@@ -1,5 +1,7 @@
 <div class="content-center">
-  <h1 class="text-center font-weight-bold">{{ title }}</h1>
+  <h1 class="text-center font-weight-bold" [appResaltado]="'#E8FF3C'">
+    {{ title }}
+  </h1>
   <form
     [formGroup]="formContacto"
     (ngSubmit)="addAlumno(this.formContacto.value)"
