--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -105,10 +105,16 @@
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef>Options</th>
       <td mat-cell *matCellDef="let alumno">
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          (click)="modificarAlumno(alumno)"
           >edit</mat-icon
         >
-        <mat-icon aria-hidden="false" aria-label="Example home icon"
+        <mat-icon
+          aria-hidden="false"
+          aria-label="Example home icon"
+          (click)="eliminarAlumno(alumno.position)"
           >delete</mat-icon
         >
         <!-- 
