--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -1,6 +1,8 @@
 <div id="content">
   <div class="container__content">
-    <h1 class="text-center p-2 font-weight-bold">Total Students</h1>
+    <h1 class="text-center p-2 font-weight-bold" [appFont]="'20px'">
+      Total Students
+    </h1>
     <div class="container content__box">
       <table class="table">
         <thead>
