--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -27,6 +27,7 @@
               title="{{ alumno.name }}"
             >
               {{ alumno.name }}
+              <!--{{ alumno.position | fullname }}-->
             </td>
             <td>{{ alumno.age }}</td>
             <td>{{ alumno.course }}</td>
