--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -63,6 +63,8 @@
   </div>
 </div>
 
+<!-- Tabla hecha con mat-table  -->
+<!-- Esta tabla es opcional pero no sé por qué no renderiza como la anterior  -->
 <h2 class="text-center">Total Students</h2>
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="alumnos" #tabla1>
@@ -102,7 +104,7 @@
       <td mat-cell *matCellDef="let alumno">{{ alumno.email }}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Options Column -->
     <ng-container matColumnDef="symbol">
       <th mat-header-cell *matHeaderCellDef>Options</th>
       <td mat-cell *matCellDef="let alumno">
