--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -52,7 +52,7 @@
               <mat-icon
                 aria-hidden="false"
                 aria-label="Example home icon"
-                (click)="muestraAlumno(alumno.name)"
+                (click)="muestraAlumno(alumno)"
                 >info</mat-icon
               >
             </td>
@@ -125,7 +125,7 @@
         <mat-icon
           aria-hidden="false"
           aria-label="Example home icon"
-          (click)="muestraAlumno(alumno.name)"
+          (click)="muestraAlumno(alumno)"
           >info</mat-icon
         >
       </td>
