--- a/desafio4/src/app/components/tabla/tabla.component.html
+++ b/desafio4/src/app/components/tabla/tabla.component.html
@@ -39,7 +39,8 @@
               <mat-icon
                 aria-hidden="false"
                 aria-label="Example home icon"
-                (click)="modificarAlumno(alumno)"
+                (click)="seleccionarAlumno(alumno)"
+                (click)="openDialog()"
                 >edit</mat-icon
               >
               <mat-icon
@@ -113,7 +114,8 @@
         <mat-icon
           aria-hidden="false"
           aria-label="Example home icon"
-          (click)="modificarAlumno(alumno)"
+          (click)="seleccionarAlumno(alumno)"
+          (click)="openDialog()"
           >edit</mat-icon
         >
         <mat-icon
