--- a/desafio05/src/app/app.component.html
+++ b/desafio05/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>Productos</h1>
-<div *ngFor="let producto of productos$ | async" class="container">
+<div *ngFor="let producto of productosFiltrados$ | async" class="container">
   <mat-card class="example-card">
     <mat-card-title-group>
       <mat-card-title>{{ producto.title }}</mat-card-title>
