--- a/desafio4/src/app/app.component.html
+++ b/desafio4/src/app/app.component.html
@@ -10,6 +10,7 @@
 <mat-sidenav-container fxFlexFill>
   <mat-sidenav #sidenav fxLayout="column" mode="side" opened="true">
     <div fxLayout="column">
+      <a [routerLink]="'inicio'" mat-button>Alumnos</a>
       <a href="#" mat-button>Cursos</a>
       <a href="#" mat-button>Usuarios</a>
     </div>
