--- a/desafio4/src/app/core/alumnos/components/contenido/contenido.component.html
+++ b/desafio4/src/app/core/alumnos/components/contenido/contenido.component.html
@@ -1,4 +1,4 @@
-<div class="container pt-2">
+<div class="container pt-2 container__box">
   <app-dialog fxLayout="column" fxLayoutAlign="center center"></app-dialog>
   <div class="pt-5">
     <app-tabla></app-tabla>
