--- a/desafio4/src/app/app.component.html
+++ b/desafio4/src/app/app.component.html
@@ -7,15 +7,14 @@
   <a mat-button>Plataforma de Estudiantes</a>
 </mat-toolbar>
 
-<mat-sidenav-container fxFlexFill>
+<mat-sidenav-container fxFlexFill class="test">
   <mat-sidenav #sidenav fxLayout="column" mode="side" opened="true">
     <div fxLayout="column">
-      <a [routerLink]="'inicio'" mat-button>Alumnos</a>
-      <a href="#" mat-button>Cursos</a>
-      <a href="#" mat-button>Usuarios</a>
+      <a mat-button [routerLink]="'inicio'">Alumnos</a>
+      <a mat-button [routerLink]="'cursos'">Cursos</a>
+      <a mat-button [routerLink]="'cursos/example'">Usuarios</a>
     </div>
   </mat-sidenav>
-  <mat-sidenav-content>
-    <app-contenido></app-contenido>
-  </mat-sidenav-content>
 </mat-sidenav-container>
+
+<router-outlet></router-outlet>
