--- a/desafio4/src/app/app.component.html
+++ b/desafio4/src/app/app.component.html
@@ -12,7 +12,7 @@
     <div fxLayout="column">
       <a mat-button [routerLink]="'inicio'">Alumnos</a>
       <a mat-button [routerLink]="'cursos'">Cursos</a>
-      <a mat-button [routerLink]="'cursos/example'">Usuarios</a>
+      <a mat-button [routerLink]="'inscripciones'">Inscripciones</a>
     </div>
   </mat-sidenav>
 </mat-sidenav-container>
