--- a/desafio4/src/app/modules/alumnos/components/dialog/dialog.component.html
+++ b/desafio4/src/app/modules/alumnos/components/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<h2>Estudiantes</h2>
+<h2>Registrar Nuevo estudiante</h2>
 <button mat-raised-button color="accent" (click)="openDialog()">
   Agregar Estudiante
 </button>
