--- a/desafio4/src/app/modules/cursos/components/alta-curso/alta-curso.component.html
+++ b/desafio4/src/app/modules/cursos/components/alta-curso/alta-curso.component.html
@@ -3,7 +3,7 @@
     <h1 class="text-center font-weight-bold">
       {{ title }}
     </h1>
-    <form [formGroup]="formCurso" (ngSubmit)="addAlumno(this.formCurso.value)">
+    <form [formGroup]="formCurso" (ngSubmit)="addCurso(this.formCurso.value)">
       <!-- Title Group-->
       <div class="form-group">
         <p>
