--- a/desafio4/src/app/modules/alumnos/components/tabla/tabla.component.html
+++ b/desafio4/src/app/modules/alumnos/components/tabla/tabla.component.html
@@ -17,7 +17,7 @@
         <tbody>
           <tr
             *ngFor="let alumno of alumnos"
-            [ngClass]="alumno.position % 2 == 0 ? 'bg-gray' : 'bg-graydark'"
+            ng-repeat="alumno in alumnos"
             (click)="userClicked(alumno.name)"
           >
             <td [ngStyle]="{ color: 'blue' }">{{ alumno.position }}</td>
