--- a/desafio4/src/app/app.component.html
+++ b/desafio4/src/app/app.component.html
@@ -10,7 +10,7 @@
 <mat-sidenav-container fxFlexFill class="test">
   <mat-sidenav #sidenav fxLayout="column" mode="side" opened="true">
     <div fxLayout="column">
-      <a mat-button [routerLink]="'inicio'">Alumnos</a>
+      <a mat-button [routerLink]="'alumnos'">Alumnos</a>
       <a mat-button [routerLink]="'cursos'">Cursos</a>
       <a mat-button [routerLink]="'inscripciones'">Inscripciones</a>
     </div>
