--- a/desafio4/src/app/modules/alumnos/components/dialog/dialog.component.html
+++ b/desafio4/src/app/modules/alumnos/components/dialog/dialog.component.html
@@ -2,7 +2,7 @@
 <button
   mat-raised-button
   color="accent"
-  [routerLink]="'alumno/nuevo-alumno'"
+  [routerLink]="'nuevo-alumno'"
   (click)="openDialog()"
 >
   Agregar Estudiante
