--- a/desafio4/src/app/modules/cursos/components/tabla/tabla.component.html
+++ b/desafio4/src/app/modules/cursos/components/tabla/tabla.component.html
@@ -16,10 +16,10 @@
         <tr class="bg-dark text-white">
           <th scope="col">#</th>
           <th scope="col">Curso</th>
-          <th scope="col">Name</th>
           <th scope="col">Description</th>
           <th scope="col">Category</th>
           <th scope="col">Capacity</th>
+          <th scope="col">Options</th>
         </tr>
       </thead>
       <tbody>
@@ -38,9 +38,7 @@
             <!--{{ alumno.position | fullname }}-->
           </td>
           <td>{{ curso.description }}</td>
-          <td>
-            {{ curso.category }}
-          </td>
+          <td>{{ curso.category }}</td>
           <td [ngClass]="curso.capacity > 14 ? 'text-success' : 'text-danger'">
             {{ curso.capacity }}
           </td>
