--- a/desafio4/src/app/modules/cursos/components/alta-curso/alta-curso.component.html
+++ b/desafio4/src/app/modules/cursos/components/alta-curso/alta-curso.component.html
@@ -64,6 +64,7 @@
           [disabled]="formCurso.invalid"
           aria-label="close dialog"
           mat-dialog-close
+          (click)="updateCurso()"
         >
           Submit
         </button>
