--- a/desafio4/src/app/autenticacion/login/login.component.html
+++ b/desafio4/src/app/autenticacion/login/login.component.html
@@ -1,11 +1,27 @@
 <div class="container pt-2 container__box">
   <form [formGroup]="formularioLogin" (ngSubmit)="login()">
-    <input type="text" placeholder="correo" formControlName="correo" />
-    <input
-      type="password"
-      placeholder="contrasena"
-      formControlName="contrasena"
-    />
-    <button type="submit">Login</button>
+    <div class="example-container">
+      <h1>LOGIN</h1>
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="correo" />
+      </mat-form-field>
+      <br />
+      <mat-form-field appearance="fill">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="contrasena" />
+      </mat-form-field>
+    </div>
+    <!-- 
+      <input type="text" placeholder="correo" formControlName="correo" />
+      <input
+        type="password"
+        placeholder="contrasena"
+        formControlName="contrasena"
+      />
+      -->
+    <button type="submit" mat-button color="accent" mat-raised-button>
+      Login
+    </button>
   </form>
 </div>
